--- a/css/styles.css
+++ b/css/styles.css
@@ -2,22 +2,57 @@
   margin: 0;
 }
 
+.root {
+  font-family: "DM Sans", sans-serif;
+}
+
 .left__container {
   max-width: 67%;
-  background: red;
+  background: #fff;
   float: left;
 }
 
 .right__container {
   max-width: 33%;
-  background: blue;
+  background: #000;
   float: right;
+}
+
+.left__container-content {
+  padding: 8vh;
 }
 
 .left__container-title {
   width: 100%;
   max-height: 100px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+
+  margin-bottom: 5vh;
 }
 
 .profile-picture {
+  width: 12vh;
+}
+
+.profile-img {
+  width: 100%;
+  border-radius: 100%;
+}
+
+.profile-name {
+  margin-left: 4vh;
+}
+
+.profile-name_name {
+  color: #333333;
+}
+
+.profile-name_job h2 {
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 1.5ch;
 }
