--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,11 @@ a:visited {
   max-width: 67%;
   background: #fff;
   float: left;
+
+  /* BACKGROUND
+  background: url(../img/holo.jpg);
+  background-size: cover;
+  */
 }
 
 .right__container {
@@ -40,6 +45,11 @@ a:visited {
   padding: 8vh;
 }
 
+.left__container-content_navbar {
+  display: flex;
+  justify-content: space-between;
+}
+
 .left__container-title {
   width: 100%;
   max-height: 100px;
@@ -49,7 +59,7 @@ a:visited {
   justify-content: left;
   align-items: center;
 
-  margin-bottom: 5vh;
+  margin-bottom: 0;
 }
 
 .profile-picture {
@@ -167,7 +177,7 @@ li {
 }
 
 .left__container-block_software {
-  margin-top: 8vh;
+  margin-top: 0;
   display: flex;
   justify-content: left;
   gap: 8px;
@@ -179,7 +189,7 @@ li {
   font-size: 1ch;
   font-weight: 600;
   padding: 4px 16px;
-  background: #fff;
+  background: transparent;
   color: #000;
   border: 2px solid #000;
   transition: all 0.12s ease-in-out;
@@ -245,4 +255,21 @@ li {
   background: #000;
   color: #fff;
   transition: all 0.12s ease-in-out;
+}
+
+.left__container-switch {
+  max-width: 8vh;
+  max-height: 8vh;
+}
+
+.holo__switch_img {
+  width: 100%;
+  border-radius: 100%;
+
+  transition: all 0.2s ease-in-out;
+}
+
+.holo__switch_img:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
